Use the generated index on HTML

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <title>Trips</title>
     <link rel="stylesheet" href="./bootstrap.min.css" />
     <link href="styles.css" rel="stylesheet" />
-    <script>window.index = [{"date":"07-09-2019","title":"Tanzania"},{"date":"11-11-2009","title":"Roma"},{"date":"12-02-2017","title":"Nova-Dehli"}]</script>
+    <!-- INDEX -->
   </head>
 
   <body>
