--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Trips</title>
-    <link rel="stylesheet" href="./bootstrap.min.css" />
+    <link rel="stylesheet" href="./vendor/bootstrap.min.css" />
     <link href="styles.css" rel="stylesheet" />
     <!-- INDEX -->
   </head>
@@ -14,8 +14,8 @@
   <body>
     <div id="root"></div>
     <script src="./bundle.js"></script>
-    <script src="./jquery-3.3.1.slim.min.js"></script>
-    <script src="./popper.min.js"></script>
-    <script src="./bootstrap.min.js"></script>
+    <script src="./vendor/jquery-3.3.1.slim.min.js"></script>
+    <script src="./vendor/popper.min.js"></script>
+    <script src="./vendor/bootstrap.min.js"></script>
   </body>
 </html>
