--- a/dist2/index.html
+++ b/dist2/index.html
@@ -8,7 +8,7 @@
     <title>Trips</title>
     <link rel="stylesheet" href="./vendor/bootstrap.min.css" />
     <link href="styles.css" rel="stylesheet" />
-    <!-- INDEX -->
+    <script>window.index = [{"date":"07-09-2019","title":"Tanzania","filename":"07-09-2019-Tanzania.md"},{"date":"11-11-2009","title":"Thailand","filename":"11-11-2009-Thailand.md"},{"date":"12-02-2017","title":"Nova-Dehli","filename":"12-02-2017-Nova-Dehli.md"}]</script>
   </head>
 
   <body>
