--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,13 @@
     <title>Trips</title>
     <link rel="stylesheet" href="./vendor/bootstrap.min.css" />
     <link href="styles.css" rel="stylesheet" />
+    <link href="clean-blog.css" rel="stylesheet" />
     <!-- INDEX -->
   </head>
 
   <body>
     <div id="root"></div>
+
     <script src="./bundle.js"></script>
     <script src="./vendor/jquery-3.3.1.slim.min.js"></script>
     <script src="./vendor/popper.min.js"></script>
