--- a/13-04-2017-Killarney.md.html
+++ b/13-04-2017-Killarney.md.html
@@ -1,7 +1,7 @@
 <h1 id="killarney">Killarney</h1>
 <p>Two of the most beautiful circuits to make in Ireland are the Dingle Peninsula and the the Ring of Kerry. Killarney is a small and pictoresque city where many people, including us, stay overnight when they want to visit them.</p>
 <p>Both the Dingle Peninsula and the Ring of Kerry are, in fact, peninsulas in the southern-west part of Ireland. The Ring of Kerry, however, is much larger than the Dingle Peninsula.</p>
-<p>It&#39;s also a great origin spot to visit the Blarney Castle and its gardens as well as Cashel Rock. We actually visited the Blarney Castle while staying at Killarney but visited the <a href="https://carneiror.github.io/trips/13-04-2017-Cork.md#cashel-rock">Cashel Rock</a> on our way to [Cork]](trips/13-04-2017-Cork.md).</p>
+<p>It&#39;s also a great origin spot to visit the Blarney Castle and its gardens as well as Cashel Rock. We actually visited the Blarney Castle while staying at Killarney but visited the <a href="https://carneiror.github.io/trips/13-04-2017-Cork.md#rock-of-cashel">Rock of Cashel</a> on our way to <a href="https://carneiror.github.io/trips/13-04-2017-Cork.md">Cork</a>.</p>
 <h2 id="saint-marys-cathedral">Saint Mary&#39;s Cathedral</h2>
 <p>Even though people usually stay in Killarney because it&#39;s a great spot to access all its surroundings, the city itself, though small, also has some nice features of its own. One of these is Saint Mary&#39;s Cathedral. It&#39;s more like a church than a cathedral, but it&#39;s quite nice and easily visitable within half an hour. We stopped here before leaving Killarney to visit the Blarney Castle.</p>
 <h2 id="dingle-pensinsula">Dingle Pensinsula</h2>
